--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,9 @@
     "react-native-screens": "^4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.15.0",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.4.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
