--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.79.5",
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
