--- a/backend/env.example
+++ b/backend/env.example
@@ -24,5 +24,8 @@ FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_AUTH_PROVIDER_X509_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_X509_CERT_URL=your_cert_url
 
+# Google AI (Gemini) Configuration
+
+
 # Email Service (Resend)
 RESEND_API_KEY=your_resend_api_key_here 
