--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/chatManualTest.js",
+    "test:chat": "node test/chatManualTest.js",
+    "test:create": "node test/chatManualTest.js createChat",
+    "test:message": "node test/chatManualTest.js sendMessage",
+    "test:search": "node test/chatManualTest.js searchUsers",
+    "test:enhanced": "node test/chatEnhancedTest.js",
+  "test:friends": "node test/friendSystemTest.js",
+  "test:errors": "node test/errorHandlingTest.js",
+  "test:validation": "node test/dataValidationTest.js"
   },
   "keywords": [
     "express",
